--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/app_cs.py=utf-8
 encoding//src/tadchoiceset.py=utf-8
 encoding//src/tadgroupset.py=utf-8
+encoding//src/tadsituacao.py=utf-8
